# BST

./: .gitignore  bst_vs_fft_vs_exact.py  mkdocs.yml  notebook.ipynb  pyproject.toml  references.bib
docs/: api.md  conventions.md  index.md  theory.md  theory_BST.md  theory_DFT.md  theory_FRDFT.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
src/bst/: __init__.py  bst.py  core.py
