[project]
name = "bst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas", email = "thomas.sturges@kit.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
]

[project.scripts]
bst = "bst:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
