[project]
name = "bst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Thomas", email = "thomas.sturges@kit.edu" }]
requires-python = ">=3.10"
dependencies = ["jax>=0.4.28", "jaxtyping>=0.2.31"]

[project.optional-dependencies]
dev = ["numpy>=1.26", "matplotlib>=3.7", "ipykernel>=6.29"]

[project.scripts]
bst = "bst:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
