[project]
name = "bst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Thomas", email = "thomas.sturges@kit.edu" }]
requires-python = ">=3.10"
dependencies = [
    "dash>=4.0.0",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.8",
    "jax>=0.4.28",
    "jaxtyping>=0.2.31",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "jupytext>=1.19.1",
    "nbstripout>=0.9.1",
]

[project.optional-dependencies]
dev = ["numpy>=1.26", "matplotlib>=3.7", "ipykernel>=6.29"]

[project.scripts]
bst = "bst:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
